# llama_setup

./: .gitignore  CMakeLists.txt  README.md  main.c  pyproject.toml  resources.rc  valora.spec
valora/: __main__.py
valora/cli/: __init__.py  app.py  other.py  setup.py  update.py
valora/core/: __init__.py  config.py  gpu.py  llama_releases.py  models.py  providers.py  safety.py
valora/tui/: __init__.py  build_selector.py
valora/utils/: __init__.py  download.py  extract.py  huggingface.py
