[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valora"
version = "1.0.0"
description = "Local AI Model Manager - embedded llama.cpp with Vulkan"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "psutil>=5.9",
    "platformdirs>=4.0",
    "readchar>=4.0",
]

[project.optional-dependencies]
gpu = [
    "pynvml>=11.5",
    "vulkan>=1.3",
]

[project.scripts]
valora = "valora.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["valora"]
